<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.jobs.ModifyJobFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginStart="@dimen/spacing_normal"
            android:id="@+id/jobCompanyPlaceHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/jobCompanySpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/jobCompanyPlaceHolder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />




        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jobTitleTextField"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_title"
        app:layout_constraintTop_toBottomOf="@id/jobCompanySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jobDescriptionTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_description"
        app:layout_constraintTop_toBottomOf="@id/jobTitleTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jobRequirementTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_requirements"
        app:layout_constraintTop_toBottomOf="@id/jobDescriptionTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_notes_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"

        app:layout_constraintTop_toBottomOf="@id/jobRequirementTextField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/appliedDatePlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/applied_date"
        app:layout_constraintTop_toBottomOf="@id/job_notes_text_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
       />

    <DatePicker
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_margin="@dimen/spacing_normal"
        android:id="@+id/appliedDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appliedDatePlaceHolder"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"/>



        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appliedDatePicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/save"
            android:textAllCaps="true"
            />


        <Button
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="?attr/materialButtonOutlinedStyle"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>